Изменил модель: оставил только текст вопроса, без заголовка. Добавил форму для публикации вопросов

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h2>Register form</h2>
-<form action="" method="post" name="login" role="form">
+<form action="" method="post" name="register" role="form">
     {{form.hidden_tag()}}
     <div class="form-group">
         <label for="username">Please enter your name:</label>
