--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,9 +29,12 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Questions</a>
+                        <a href="/questions">Questions</a>
                     </li>
                     {% if current_user.is_authenticated() %}
+                    <li>
+                        <a href="/add">Add</a>
+                    </li>
                     <li>
                         <p class="navbar-text text-success">
                         (Logged in as: {{ current_user.name }})
