--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-{% for q in questions %}
-<h3>{{ q.title }}</h3>
-<p>{{ q.text }}</p>
-{% endfor %}
+<h3>This is a question-and-answer website</h3>
+<p>Unregistered users may view the qestions and answers.</p>
+<p>Registered users may post new qestions and answers. They also can vote for answers.</p>
+<a class="btn btn-default" href="/questions" role="button">Open questions list</a>
+{% if current_user.is_authenticated() %}
+<a class="btn btn-default" href="/add" role="button">Add question</a>
+{% endif %}
 {% endblock %}
