--- a/app/templates/add_question.html
+++ b/app/templates/add_question.html
@@ -1,15 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Post your question</h2>
-<form action="" method="post" name="question" role="form">
-    {{form.hidden_tag()}}
-    <div class="form-group">
-        <label for="text">Please enter body of your question:</label>
-        {{form.text(class_='form-control')}}
-        {% for error in form.errors.text %}
-        <span class="text-danger">{{error}}</span>
-        {% endfor %}
+<div class="row">
+    <div class="col-md-12">
+        <h2>Post your question</h2>
+        <form action="" method="post" name="question" role="form">
+            {{form.hidden_tag()}}
+            <div class="form-group">
+                <label for="text">Please enter body of your question:</label>
+                {{form.text(class_='form-control')}}
+                {% for error in form.errors.text %}
+                <span class="text-danger">{{error}}</span>
+                {% endfor %}
+            </div>
+            <button type="submit" class="btn btn-success">Submit</button>
+            <input action="action" type="button" value="Back" onclick="history.go(-1);" class="btn btn-default"/>
+        </form>
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
-</form>
+</div>
 {% endblock %}
