--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
     <title>Web - FAQ</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">WEB-FAQ</a>
+                <a class="navbar-brand" href="/">WEB-FAQ</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -71,12 +71,10 @@
     {% endblock %}
 
     <!-- Footer -->
-    <div class="row">
-        <div class="col-md-12">
-            <div class="footer">
-                <div class="container">
-                    <div class="footer-copyright text-center">Copyright © 2015</div>
-                </div>
+    <div class="navbar-fixed-bottom row-fluid">
+        <div class="navbar-inner">
+            <div class="container">
+                <div class="footer-copyright text-center">Copyright © 2015</div>
             </div>
         </div>
     </div>
@@ -85,8 +83,8 @@
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="static/js/jquery.js" type="text/javascript"></script>
+    <script src="/static/js/jquery.js" type="text/javascript"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="static/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/static/js/bootstrap.min.js" type="text/javascript"></script>
 </body>
 </html>
