--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,22 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Authenticate yourself please</h2>
-<form action="" method="post" name="login" role="form">
-    {{form.hidden_tag()}}
-    <div class="form-group">
-        <label for="username">Please enter your email:</label>
-        {{form.email(class_='form-control')}}
-        {% for error in form.errors.email %}
-        <span class="text-danger">{{error}}</span>
-        {% endfor %}
+<div class="row">
+    <div class="col-md-12">
+        <h2>Authenticate yourself please</h2>
+        <form action="" method="post" name="login" role="form">
+            {{form.hidden_tag()}}
+            <div class="form-group">
+                <label for="username">Please enter your email:</label>
+                {{form.email(class_='form-control')}}
+                {% for error in form.errors.email %}
+                <span class="text-danger">{{error}}</span>
+                {% endfor %}
+            </div>
+            <div class="form-group">
+                <label for="password">Please enter your password:</label>
+                {{form.password(class_='form-control')}}
+                {% for error in form.errors.password %}
+                <span class="text-danger">{{error}}</span>
+                {% endfor %}
+            </div>
+            <button type="submit" class="btn btn-success">Login</button>
+            <input action="action" type="button" value="Back" onclick="history.go(-1);" class="btn btn-default"/>
+        </form>
     </div>
-    <div class="form-group">
-        <label for="password">Please enter your password:</label>
-        {{form.password(class_='form-control')}}
-        {% for error in form.errors.password %}
-        <span class="text-danger">{{error}}</span>
-        {% endfor %}
-    </div>
-    <button type="submit" class="btn btn-default">Login</button>
-</form>
+</div>
 {% endblock %}
