--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,29 +29,29 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="/questions">Questions</a>
+                        <a href="/questions">{{ _('Questions') }}</a>
                     </li>
                     {% if current_user.is_authenticated() %}
                     <li>
-                        <a href="/add">Add</a>
+                        <a href="/add">{{ _('Add question') }}</a>
                     </li>
                     <li>
                         <p class="navbar-text text-success">
-                        (Logged in as: {{ current_user.name }})
+                        ({{ _('Logged in as') }}: {{ current_user.name }})
                         </p>
                     </li>
                     <li>
-                        <a href="/logout">Logout</a>
+                        <a href="/logout">{{ _('Logout') }}</a>
                     </li>
                     {% else %}
                     <li>
-                        <p class="navbar-text">(Not logged in)</p>
+                        <p class="navbar-text">({{ _('Not logged in') }})</p>
                     </li>
                     <li>
-                        <a href="/login">Login</a>
+                        <a href="/login">{{ _('Login') }}</a>
                     </li>
                     <li>
-                        <a href="/register">Register</a>
+                        <a href="/register">{{ _('Register') }}</a>
                     </li>
                     {% endif %}
                 </ul>
