--- a/app/templates/questions.html
+++ b/app/templates/questions.html
@@ -2,10 +2,10 @@
 {% block content %}
 <div class="row">
     <div class="col-md-12">
-        <h3>Questions</h3>
+        <h3>{{ _('Questions') }}</h3>
         {% for q in questions %}
         <div class="well well-sm">
-            <p><strong>{{ q.text }}</strong> <a class="pull-right" href="/questions/{{ q.id }}">details</a></p>
+            <p><strong>{{ q.text }}</strong> <a class="pull-right" href="/questions/{{ q.id }}">{{ _('answers') }}</a></p>
         </div>
         {% endfor %}
     </div>
